--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3.8'
 services:
   catalog-service:
     depends_on:
+      - fluent-bit
       - polar-postgres
-      - config-service
-    image: 'catalog-service'
+      - polar-keycloak
+    image: 'ghcr.io/eduaugustoo/catalog-service:latest'
     container_name: 'catalog-service'
     ports:
       - 9091:9091
@@ -13,15 +14,76 @@ services:
       - BPL_JVM_THREAD_COUNT=50
       - BPL_DEBUG_ENABLED=true
       - BPL_DEBUG_PORT=8001
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_DATASOURCE_URL=jdbc:postgresql://polar-postgres:5432/polardb_catalog
       - SPRING_PROFILES_ACTIVE=testdata
+      - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: 127.0.0.1:24224
+
+  order-service:
+    depends_on:
+      - polar-postgres
+      - polar-keycloak
+    image: 'ghcr.io/eduaugustoo/order-service:latest'
+    container_name: 'order-service'
+    ports:
+      - 9002:9002
+      - 8002:8002
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8002
+      - POLAR_CATALOG_SERVICE_URI=http://catalog-service:9091
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_R2DBC_URL=r2dbc:postgresql://polar-postgres:5432/polardb_order
+      - SPRING_FLYWAY_URL=jdbc:postgresql://polar-postgres:5432/polardb_order
+      - SPRING_RABBITMQ_HOST=polar-rabbitmq
+      - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
+  
+  dispatcher-service:
+    depends_on:
+      - polar-rabbitmq
+    image: 'ghcr.io/eduaugustoo/dispatcher-service:latest'
+    container_name: dispatcher-service
+    ports:
+      - 9003:9003
+      - 8003:8003
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8003
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_RABBITMQ_HOST=polar-rabbitmq
+  
+  edge-service:
+    depends_on:
+      - polar-redis
+    image: 'ghcr.io/eduaugustoo/edge-service:latest'
+    container_name: edge-service
+    ports:
+      - 9000:9000
+      - 8000:8000
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8000
+      - CATALOG_SERVICE_URL=http://catalog-service:9091
+      - ORDER_SERVICE_URL=http://order-service:9002
+      - SPA_URL=http://polar-ui:9004
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_REDIS_HOST=polar-redis
+      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
 
   config-service:
-    image: 'config-service'
+    image: 'ghcr.io/eduaugustoo/config-service:latest'
     container_name: 'config-service'
     ports:
-    - 8888:8888
+      - 8888:8888
+      - 9888:9888
+    environment:
+      - BPL_JVM_THREAD_COUNT=50
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=9888
 
   polar-postgres:
     image: 'postgres:14.1'
@@ -31,4 +93,73 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=polardb_catalog
+    volumes:
+      - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  polar-redis:
+    image: 'redis:7.0'
+    container_name: 'polar-redis'
+    ports:
+      - 6379:6379
+
+  polar-rabbitmq:
+    image: rabbitmq:3.10-management
+    container_name: polar-rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+
+  polar-keycloak:
+    image: quay.io/keycloak/keycloak:18.0
+    container_name: polar-keycloak
+    command: start-dev --import-realm
+    volumes:
+      - ./keycloak:/opt/keycloak/data/import
+    environment:
+      - KEYCLOAK_ADMIN=user
+      - KEYCLOAK_ADMIN_PASSWORD=password
+    ports:
+      - 8080:8080
+
+  polar-ui:
+    image: ghcr.io/polarbookshop/polar-ui:latest
+    container_name: polar-ui
+    ports:
+      - 9004:9004
+    environment:
+      - PORT=9004
+
+  grafana:
+    image: grafana/grafana:8.4.4
+    container_name: grafana
+    depends_on:
+      - loki
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=user
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    volumes:
+      - ./observability/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - ./observability/grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./observability/grafana/grafana.ini:/etc/grafana/grafana.ini
+
+  loki:
+    image: grafana/loki:2.4.2
+    container_name: loki
+    depends_on:
+      - fluent-bit
+    ports:
+      - 3100:3100
+
+  fluent-bit:
+    image: grafana/fluent-bit-plugin-loki:2.4.2-amd64
+    container_name: fluent-bit
+    ports:
+      - 24224:24224
+    environment:
+      - LOKI_URL=http://loki:3100/loki/api/v1/push
+    volumes:
+      - ./observability/fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
