feat/Adding kustomize config files

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - fluent-bit
       - polar-postgres
       - polar-keycloak
+      - tempo
     image: 'ghcr.io/eduaugustoo/catalog-service:latest'
     container_name: 'catalog-service'
     ports:
@@ -18,6 +19,9 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://polar-postgres:5432/polardb_catalog
       - SPRING_PROFILES_ACTIVE=testdata
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
+      - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.12.1.jar
+      - OTEL_SERVICE_NAME=catalog-service
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
     logging:
       driver: fluentd
       options:
@@ -25,6 +29,7 @@ services:
 
   order-service:
     depends_on:
+      - fluent-bit
       - polar-postgres
       - polar-keycloak
     image: 'ghcr.io/eduaugustoo/order-service:latest'
@@ -41,9 +46,14 @@ services:
       - SPRING_FLYWAY_URL=jdbc:postgresql://polar-postgres:5432/polardb_order
       - SPRING_RABBITMQ_HOST=polar-rabbitmq
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: 127.0.0.1:24224
   
   dispatcher-service:
     depends_on:
+      - fluent-bit
       - polar-rabbitmq
     image: 'ghcr.io/eduaugustoo/dispatcher-service:latest'
     container_name: dispatcher-service
@@ -55,10 +65,16 @@ services:
       - BPL_DEBUG_PORT=8003
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_RABBITMQ_HOST=polar-rabbitmq
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: 127.0.0.1:24224
   
   edge-service:
     depends_on:
+      - fluent-bit
       - polar-redis
+      - tempo
     image: 'ghcr.io/eduaugustoo/edge-service:latest'
     container_name: edge-service
     ports:
@@ -73,6 +89,13 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_REDIS_HOST=polar-redis
       - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI=http://host.docker.internal:8080/realms/PolarBookshop
+      - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.12.1.jar
+      - OTEL_SERVICE_NAME=edge-service
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: 127.0.0.1:24224
 
   config-service:
     image: 'ghcr.io/eduaugustoo/config-service:latest'
@@ -136,6 +159,8 @@ services:
     container_name: grafana
     depends_on:
       - loki
+      - prometheus
+      - tempo
     ports:
       - 3000:3000
     environment:
@@ -163,3 +188,20 @@ services:
       - LOKI_URL=http://loki:3100/loki/api/v1/push
     volumes:
       - ./observability/fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+
+  prometheus:
+    image: prom/prometheus:v2.34.0
+    container_name: prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  tempo:
+    image: grafana/tempo:1.3.2
+    container_name: tempo
+    command: -config.file /etc/tempo-config.yml
+    ports:
+      - 4317:4317
+    volumes:
+      - ./observability/tempo/tempo.yml:/etc/tempo-config.yml
